# miscpy

./: .gitignore  ABC.md  DataModel.md  Descriptors.md  FlowControl.md  Outline.md  README.md  SentinelValue.md  Slots.md
Extra/: CleanCodePrinciples.md  CleanCodePython.md  CodeOrganisation.md  DesignPatterns.md  PackagingWalkthrough.md  PyTorch Repo.ipynb  PyTorchRepo.ipynb  Testing.md  TypeHints.md  Utilities.md  names.tsv
Extra/Flit/: LICENSE  README.md  hello.py  pyproject.toml
Extra/MonkeyType/: monkeytype.sqlite3
Extra/Packaging/: Slides.md
Extra/PackagingIntro/: README.md
Live/: Scratch.ipynb  Scratch1.ipynb  ScratchLimited.ipynb
Live/PackagingExample/hellopkg/: setup.py
Live/PackagingExample/hellopkg/hello/: hello.py
Live/Proj/: test_ops.py
Snippets/BenchmarkDeco/: main.py
Snippets/IterZip/: main.py
Snippets/TodoList/: main.py
Snippets/TypeHints/: protocol.py
notebooks/: Asyncio.ipynb  Collections.ipynb  CollectionsABC.ipynb  ContextManager.ipynb  DataModelOverview.ipynb  Decorators.ipynb  Descriptors.ipynb  FunctionalAspects.ipynb  Generators.ipynb  Interfaces.ipynb  Iterators.ipynb  Metaclasses.ipynb  Snippets  Tasks.ipynb  TypeHintsOverview.ipynb
